update codec and add necessary features

--- a/primitive-types/Cargo.toml
+++ b/primitive-types/Cargo.toml
@@ -26,4 +26,4 @@ serde_no_std = ["impl-serde"]
 codec = ["impl-codec"]
 rlp = ["impl-rlp"]
 #arbitrary = ["fixed-hash/arbitrary", "uint/arbitrary"]
-#num-traits = ["impl-num-traits"]
+num-traits = ["impl-num-traits"]
